--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "@architect/architect": "^6.3.5",
     "aws-sdk": "^2.668.0"
+  },
+  "scripts": {
+    "start": "arc sandbox"
   }
 }
