--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@apollo/federation": "^0.21.0",
     "@architect/architect": "^6.3.5",
+    "apollo-server-lambda": "^2.21.0",
     "aws-sdk": "^2.668.0"
   },
   "scripts": {
