--- a/src/http/post-twd-website/package.json
+++ b/src/http/post-twd-website/package.json
@@ -7,7 +7,8 @@
     "@apollo/federation": "^0.21.0",
     "@architect/architect": "^6.3.5",
     "apollo-server-lambda": "^2.21.0",
-    "aws-sdk": "^2.668.0"
+    "aws-sdk": "^2.668.0",
+    "pusher": "^4.0.2"
   },
   "scripts": {
     "start": "arc sandbox"
